--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://izima01.github.io/Task1",
+  "homepage": "https://Izima01.github.io/Task1",
   "name": "hngtask1",
   "version": "0.1.0",
   "private": true,
